[tool.poetry]
name = "uitclass"
version = "0.1.0"
description = ""
authors = ["rohan1920 <talalmajeed85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sql = "^2022.4.0"
app = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
