[tool.poetry]
name = "uitclass"
version = "0.1.0"
description = ""
authors = ["rohan1920 <talalmajeed85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
build-forntend = "poetry.core.masonry.sql"